<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/notesFragment">

    <fragment
        android:id="@+id/notesFragment"
        android:name="ghasemi.abbas.note.ui.notes.NotesFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_notes">
        <action
            android:id="@+id/action_notesFragment_to_addFragment"
            app:destination="@id/addFragment"
            app:enterAnim="@anim/from_right"
            app:exitAnim="@anim/to_left"
            app:popEnterAnim="@anim/from_left"
            app:popExitAnim="@anim/to_right" />
        <action
            android:id="@+id/action_notesFragment_to_editFragment"
            app:destination="@id/editFragment"
            app:enterAnim="@anim/fade_in"
            app:exitAnim="@anim/fade_out"
            app:popEnterAnim="@anim/fade_in"
            app:popExitAnim="@anim/fade_out"
            app:popUpToInclusive="false" />
        <action
            android:id="@+id/action_notesFragment_to_settingsFragment"
            app:destination="@id/settingsFragment" />
    </fragment>
    <fragment
        android:id="@+id/addFragment"
        android:name="ghasemi.abbas.note.ui.add.AddFragment"
        android:label="@string/add_new_note"
        tools:layout="@layout/fragment_detail"/>
    <fragment
        android:id="@+id/editFragment"
        android:name="ghasemi.abbas.note.ui.edit.EditFragment"
        tools:layout="@layout/fragment_detail">
        <argument
            android:name="currentItem"
            app:argType="ghasemi.abbas.note.data.Note" />
    </fragment>
    <fragment
        android:id="@+id/settingsFragment"
        android:name="ghasemi.abbas.note.ui.SettingsFragment"
        android:label="@string/settings"
        tools:layout="@layout/fragment_settings">
    </fragment>
</navigation>