<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.core.widget.NestedScrollView
        android:id="@+id/background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:scrollbars="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

        <EditText
            android:id="@+id/et_add_title"
            style="@style/DetailStyle"
            android:hint="@string/title"
            android:importantForAutofill="no"
            android:inputType="textCapSentences"
            android:maxLines="2"
            android:textColorHint="@color/grey" />

        <TextView
            android:id="@+id/tv_note_date"
            style="@style/DateTimeStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:textStyle="italic" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_14"
            android:orientation="horizontal">

            <View
                android:id="@+id/view"
                android:layout_width="3dp"
                android:layout_height="match_parent"
                android:background="@drawable/content_note_style" />

            <EditText
                android:id="@+id/et_add_note"
                style="@style/DetailStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="0dp"
                android:background="@android:color/transparent"
                android:gravity="start|top"
                android:hint="@string/note"
                android:importantForAutofill="no"
                android:inputType="textCapSentences|textMultiLine"
                android:minHeight="320dp"
                android:paddingStart="@dimen/margin_14"
                android:paddingEnd="@dimen/margin_14"
                android:textColorHint="@color/grey"
                android:textSize="@dimen/large_regular_text" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin_14"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_text_stats"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/empty_text_stats"
                android:textSize="12sp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_checklist"
                style="@style/Widget.Material3.Button.TextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/insert_checklist" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.github.naz013.colorslider.ColorSlider
                android:id="@+id/color_slider"
                android:layout_width="0dp"
                android:layout_height="35dp"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="@dimen/margin_14"
                android:layout_weight="1"
                app:cs_hex_colors="@array/hex_colors"
                app:cs_selector_color="@color/colorPrimary" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/fab_stt"
                style="@style/Widget.Material3.FloatingActionButton.Surface"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_14"
                android:contentDescription="@string/speech_to_text_button"
                app:srcCompat="@drawable/round_keyboard_voice_24" />

        </LinearLayout>

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</layout>
